src/test/deca/syntax/valid/test_dir/added/lexer/include.deca
// Description:
//    test of comments
//
// Results:
//    test_lex --> no error, no token
//
// History:
//    created on 05/01/2022

#include "hello.decah"
#include "world.decah"