src/test/deca/syntax/invalid/test_dir/added/lexer/string_backslashs.deca
// Description:
//    test of corrupted string (with slashs)
//
// Results:
//    test_lex --> error line 10
//
// History:
//    created on 05/01/2022

"lalala\\\lalala"